# NewbiOogway

./: README.md
Robotarm_ws/: INSTALL.md  PROGRESS.md  README.md  SYSTEM.md
Robotarm_ws/Architecture/: open_manipulator_x.vsdx
Robotarm_ws/aruco_ros/aruco/src/aruco/: markerdetector.cpp
Robotarm_ws/aruco_ros/aruco_ros/launch/: marker_publisher.launch.py  single.launch.py
Robotarm_ws/camera/: INSTALL.md  README.md
Robotarm_ws/custom/arm_service/: CMakeLists.txt  package.xml
Robotarm_ws/custom/arm_service/include/arm_service/: arm_movecart.hpp  arm_movejoint.hpp  arm_movetool.hpp
Robotarm_ws/custom/arm_service/src/: arm_movecart.cpp  arm_movejoint.cpp  arm_movetool.cpp  test_movecart.cpp  test_movejoint.cpp  test_movetool.cpp  test_pnp.cpp
Robotarm_ws/custom/arm_subscriber/: CMakeLists.txt  package.xml
Robotarm_ws/custom/arm_subscriber/include/arm_subscriber/: arm_subscriber.hpp
Robotarm_ws/custom/arm_subscriber/src/: arm_subscriber.cpp  test_armsubscriber.cpp
Robotarm_ws/custom/manipulatorx_handeye/: CMakeLists.txt  package.xml
Robotarm_ws/custom/manipulatorx_handeye/launch/: manipulatorx_handeye.launch.py
Robotarm_ws/custom/manipulatorx_handeye/rviz/: handeye.rviz
Robotarm_ws/custom/manipulatorx_handeye/src/: manipulatorx_search_aruco.cpp
Robotarm_ws/custom/manipulatorx_handeye/urdf/: manipulator_camera.urdf.xacro
Robotarm_ws/custom/manipulatorx_ign/: CMakeLists.txt  package.xml
Robotarm_ws/custom/manipulatorx_ign/config/: initial_positions.yaml  mx_controllers.yaml
Robotarm_ws/custom/manipulatorx_ign/include/manipulatorx_ign/: test_manipulatorx_ign.hpp
Robotarm_ws/custom/manipulatorx_ign/launch/: manipulatorx_ign.launch.py
Robotarm_ws/custom/manipulatorx_ign/rviz/: manipulatorx_viz.rviz
Robotarm_ws/custom/manipulatorx_ign/src/: test_manipulatorx_ign.cpp  test_manipulatorx_ign_node.cpp
Robotarm_ws/custom/manipulatorx_ign/urdf/: manipulator_camera.urdf  manipulator_camera.urdf.xacro  manipulator_control.xacro  open_manipulator_x.urdf.xacro
Robotarm_ws/custom/manipulatorx_ign/worlds/: mx_camera.sdf
Robotarm_ws/custom/manipulatorx_moveit/: .setup_assistant  CMakeLists.txt  manipulatorx_plugin.xml  package.xml
Robotarm_ws/custom/manipulatorx_moveit/config/: custom_planning.yaml  kinematics.yaml  ompl_planning.yaml  ros2_controllers.yaml
Robotarm_ws/custom/manipulatorx_moveit/launch/: demo.launch.py  manipulator_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
Robotarm_ws/custom/manipulatorx_moveit/misc/: moveit_config_to_dict.txt
Robotarm_ws/custom/manipulatorx_moveit/src/: manipulatorx_context.cpp  manipulatorx_context.h  manipulatorx_plugin.cpp
Robotarm_ws/custom/manipulatorx_moveit/srdf/: open_manipulator_x.srdf
Robotarm_ws/custom/manipulatorx_moveit/urdf/: open_manipulator_x.ros2_control.xacro  open_manipulator_x.urdf  open_manipulator_x.urdf.xacro
Robotarm_ws/manipulatorx/: open_manipulator_x.repos
Robotarm_ws/manipulatorx/catkin/: README.md
Robotarm_ws/manipulatorx/open_manipulator_msgs/: CMakeLists.txt  package.xml
Robotarm_ws/manipulatorx/open_manipulator_x_description/launch/: open_manipulator_x_rviz.launch.py
Robotarm_ws/manipulatorx/open_manipulator_x_description/urdf/: open_manipulator_x.urdf  open_manipulator_x.urdf.xacro  open_manipulator_x_robot.urdf.xacro
Robotarm_ws/manipulatorx/open_manipulator_x_libs/src/: open_manipulator_x.cpp
Robotarm_ws/manipulatorx/open_manipulator_x_teleop/open_manipulator_x_teleop/script/: teleop_keyboard.py
Turtlebot_ws/: README.md
Turtlebot_ws/move_turtlebot/: CMakeLists.txt  package.xml
Turtlebot_ws/move_turtlebot/include/move_turtlebot/: move.hpp
Turtlebot_ws/move_turtlebot/src/: move.cpp  move_node.cpp
Turtlebot_ws/ros2_aruco/ros2_aruco/config/: aruco_parameters.yaml
Turtlebot_ws/spin_around/: CMakeLists.txt  package.xml
Turtlebot_ws/spin_around/include/spin_around/: spin.hpp
Turtlebot_ws/spin_around/src/: spin.cpp  spin_node.cpp
Turtlebot_ws/t4_wyman/: CMakeLists.txt  package.xml
Turtlebot_ws/t4_wyman/config/: move.xml  nav2.yaml
Turtlebot_ws/t4_wyman/launch/: tb4_wyman_patrol.launch.py  tb4_wyman_slam.launch.py
Turtlebot_ws/t4_wyman/maps/: wyman.pgm  wyman.yaml
Turtlebot_ws/t4_wyman/worlds/: wyman.sdf
Turtlebot_ws/t4_wyman/worlds/meshes/: wyman_decimated2.stl
