<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulatorx_handeye</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1301637976@qq.com">steve</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>realsense2_camera</depend>
  <depend>aurco_ros</depend>
  <depend>aruco_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>open_manipulator_x_controller</depend>
  <depend>open_manipulator_x_description</depend>
  <depend>realsense2_description</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
